--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body id="body">
     <header>
         <nav>
-            <div class="select">
-                <p>Select a Quiz</p>
+            <div class="color-trans">
+                <div class="color-trans-two"></div>
             </div>
             <div class="options">
                 <button id="htmlbtn">HTML Quiz</button>
@@ -23,9 +23,9 @@
                 <button id="internetbtn">Internet Quiz</button>
             </div>
         </nav>
-        <div class="arrow-container">
+        <!-- <div class="arrow-container">
             <img src="./img/dropdown.png" alt="Dropdown Arrow">
-        </div>
+        </div> -->
     </header>
 
     <main>
@@ -52,10 +52,10 @@
             </div>
             </section> 
         <section class="quiz-body">
+            <div class="quiz-title">
+                <h1 id="title"></h1>
+            </div>
             <div class="question-answer">
-                <div class="quiz-title">
-                    <h1 id="title"></h1>
-                </div>
                 <div class="question-container">
                     <div class="question-box">
                         <h3 id="question"></h3>
