--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/quizbody.css">
-    <script type="module" src="./js/quiz.js" defer></script>
+    <link rel="stylesheet" href="./public/css/header.css">
+    <link rel="stylesheet" href="./public/css/quizbody.css">
+    <script type="module" src="./public/js/quiz.js" defer></script>
     <title>Front End Quizzes</title>
 </head>
 <body id="body">
